projects/compiler/test/typechecker/return/error_unreachable_stmt_match_outside.out
Error at %TEST_DIR%/typechecker/return/error_unreachable_stmt_match_outside.abra:7:3
Unreachable code
  |    val x = 123
       ^
Control flow exits before this code is reached
